update vscode gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -50,4 +50,7 @@ local.properties
 *.sass-cache
 
 ### Visual studio code
-.vscode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/extensions.json
