remove escape delay in tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,10 +1,12 @@
 # Terminal
 set -g default-terminal "screen-256color"
-#set -g xterm-keys on
 
 set -g set-titles on
 set -g set-titles-string "#T.#I.#W"
 set -ga terminal-overrides ',xterm*:smcup@:rmcup' # use terminal scrolling instead of tmux one
+
+# Remove escape delay
+set -s escape-time 0
 
 # Status bar
 set -g status-right ''
