update tmux.conf to 1.9

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,14 +10,10 @@ set -s escape-time 0
 
 # Status bar
 set -g status-right ''
-
-# Colors
-set -g status-fg white
-set -g status-bg default
-set -g status-attr default
+set -g status-style fg=white,bg=default
 
 # Key bindings
-set -g prefix C-a	# rebind default prefix key to screen like
+set -g prefix C-a # rebind default prefix key to screen like
 
 bind r source-file ~/.tmux.conf
 
