--- a/ansible/bootstrap-desktop-ubuntu.yml
+++ b/ansible/bootstrap-desktop-ubuntu.yml
@@ -56,6 +56,7 @@
           - gnupg
           - gnupg2
           - lsb-release
+          - python3-pip
 
     - name: Install custom packages
       apt:
