tmux: auto rename windows

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,6 +12,12 @@ set -s escape-time 0
 set -g status-right ''
 set -g status-style fg=white,bg=default
 
+set-option -g status-interval 1
+set-option -g automatic-rename on
+set-option -g automatic-rename-format '#{b:pane_current_path}'
+
+# set -g mouse on
+
 # Key bindings
 set -g prefix C-a # rebind default prefix key to screen like
 
