move zsh configs to .config

--- a/.config/git/config
+++ b/.config/git/config
@@ -4,4 +4,13 @@
 [push]
 	default = simple
 [core]
-	excludesfile = ~/.gitignore
+	excludesfile = ~/.config/git/ignore
+	pager = delta
+
+[delta]
+	syntax-theme = 1337
+	plus-color = "#012800"
+	minus-color = "#340001"
+
+[interactive]
+	diffFilter = delta --color-only
