--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -13,10 +13,12 @@
    - ~/.config/shell
    - ~/.config/zsh
    - ~/.config/wget
+   - ~/.cache/zsh
 
 - link:
     ~/.zshenv: .config/zsh/.zshenv
     ~/.config/zsh/.zshrc: .config/zsh/.zshrc
+    ~/.config/zsh/aliases.zsh: .config/zsh/aliases.zsh
     ~/.config/wget/wgetrc: .config/wget/wgetrc
     "~/.config/konsolerc": konsole/konsolerc
     "~/.local/share/lscolors.sh": .local/share/lscolors.sh
