--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,5 +1,5 @@
 # Terminal
-set -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color"
 
 set -g set-titles on
 set -g set-titles-string "#T.#I.#W"
