--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -3,7 +3,7 @@ set -g default-terminal "tmux-256color"
 
 set -g set-titles on
 set -g set-titles-string "#T.#I.#W"
-set -ga terminal-overrides ',xterm*:smcup@:rmcup' # use terminal scrolling instead of tmux one
+set -ga terminal-overrides ',xterm*:smcup@:rmcup:RGB' # use terminal scrolling instead of tmux one
 
 # Remove escape delay
 set -s escape-time 0
