--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -8,6 +8,10 @@ set -ga terminal-overrides ',xterm*:smcup@:rmcup:RGB' # use terminal scrolling i
 # Remove escape delay
 set -s escape-time 0
 
+# Count windows from 1
+set -g base-index 1
+setw -g pane-base-index 1
+
 # Status bar
 set -g status-right ''
 set -g status-style fg=white,bg=default
