--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -23,6 +23,7 @@
     ~/.config/zsh/aliases.zsh: .config/zsh/aliases.zsh
     ~/.config/zsh/bindings.zsh: .config/zsh/bindings.zsh
     ~/.config/nvim/init.vim: .config/nvim/init.vim
+    ~/.config/nvim/ftplugin: .config/nvim/ftplugin
     ~/.config/wget/wgetrc: .config/wget/wgetrc
     "~/.config/konsolerc": konsole/konsolerc
     "~/.local/share/lscolors.sh": .local/share/lscolors.sh
@@ -32,8 +33,7 @@
     ~/.config/tmux/tmux.conf: .config/tmux/tmux.conf
     "~/.config/git/config": .config/git/config
     "~/.config/git/ignore": .config/git/ignore
-    "~/.conky": .conky
-    "~/.conkyrc": .conkyrc
+    "~/.config/conky": .config/conky
     "~/.config/redshift.conf": .config/redshift.conf
     "~/.lando/config.yml": .lando/config.yml
 
